Separacao de contextos e functions das controllers

--- a/Projeto_portifolio/Views/Shared/Login/_JsLogin.cshtml
+++ b/Projeto_portifolio/Views/Shared/Login/_JsLogin.cshtml
@@ -6,7 +6,14 @@
 
 <partial name="~/Views/Sections/Scripts.cshtml" />
 
+
+
 <script type="text/javascript">
+
+$(document).ready(function(){
+    $("body").css({'background-image':'url( ' + @Url.Content("~/Fotos_sistema/fundo_manager_portifolio.jpg") +')'});
+});
+
 
     //$("#btnSubmit").click(function () {
     //    var username = $("#username").val();
