--- a/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
+++ b/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
@@ -99,7 +99,7 @@
                         <br/>
                         <div class="row">
                             <div class="col col-md"></div>
-                            <div class="col col-md"><button type="submit" class="btn btn-lg btn-primary btn-block"> Salvar </button></div>
+                            <div class="col col-md"><button type="submit" class="btn btn-lg btn-primary btn-block"><span class="fa fa-save"></span> &nbsp; Salvar </button></div>
                             <div class="col col-md"></div>
                         </div>
                         }
@@ -207,12 +207,13 @@
             <div class="card">
                 <div class="card-header" id="headingThree">
                     <h2 class="mb-0">
+                        <span class="fab fa-trello"></span> Configuração Curriculum
                         <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right" id="button-collapse" data-toggle="collapse" data-target="#collapseThree"></a>
                     </h2>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                     <div class="card-body">
-                        <p>CSS stands for Cascading Style Sheet. CSS allows you to specify various style properties for a given HTML element such as colors, backgrounds, fonts etc. <a href="https://www.tutorialrepublic.com/css-tutorial/" target="_blank">Learn more.</a></p>
+                        Em breve
                     </div>
                 </div>
             </div>
